[package]
name = "tantivy-cli"
version = "0.23.0-dev-prosearch"
authors = ["Paul Masurel <paul.masurel@gmail.com>", "Milind Mantri <milind@milindmantri.com>"]

description = """Command line interface for Tantivy, a search engine library."""
documentation = "https://github.com/milindmantri/prosearch"
homepage = "https://github.com/milindmantri/prosearch"
repository = "https://github.com/milindmantri/prosearch"

readme = "README.md"
keywords = ["search", "information", "retrieval"]
license = "MIT"
edition = "2021"

[dependencies]
time = "0.3"
iron = "0.6"
staticfile = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
persistent = "0.4"
bodyparser = "0.8.0"
clap = "4"
ansi_term = "0.12"
urlencoded = "0.6"
mount = "0.4"
log = "0.4"
env_logger = "0.10"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "2f5a269" }
crossbeam-channel = "0.5.8"

[[bin]]
name = "tantivy"
path = "src/main.rs"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false

[profile.release-speed]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
